--- a/math250_nov5_Tong Hao.qmd
+++ b/math250_nov5_Tong Hao.qmd
@@ -80,9 +80,8 @@ addmargins(species_island)
 ```
 
 ## Problem 4
-git remote add origin https://github.com/haotttttt/math250_nov5_Tong-Hao.git
-git branch -M main
-git push -u origin main
+create_github_token()
+gitcreds::gitcreds_set()
 use_github()
 
 
